[metadata]
name = seed_detector
version = 0.0.1
description = A python tool for detecting seeds.
long_description = file: README.md, CHANGELOG.md, LICENSE
license = MIT

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    opencv-python
    scikit-image
    scikit-learn
    pandas
    numpy
    importlib_metadata
    click
    cloup

[options.package_data]
* = *.txt, *.rst

[options.entry_points]
console_scripts =
    seed_detector = seed_detector.cli:main
